@@ -238,6 +238,7 @@ DrawWalls = true, true, false, false, false, false
     DecelJerk = 0.2
     ServicedFloors = 0 - 9
     AssignedShaft = 1
+    LevelingOpen = 0.2
     
     #then create the elevator at position (0, 5.706) on the first floor (0)
     CreateElevator false, 0, 5.706, 0
@@ -309,7 +310,7 @@ DrawWalls = true, true, false, false, false, false
     #door just a tiny bit.
     
     CreatePanel ElevPanel, 15, 5, back, -1.75 - 0.875 + 0.1, -3 + 0.2 + 0.001, 0.15, 0.15, 0.3, 0.45, 4, 0, 0
-    AddFloorButton 1, Button10, ButtonLit10, 2, 3, 9, 1, 1
+    AddFloorButton 1, switch.wav, Button10, ButtonLit10, 2, 3, 9, 1, 1
     AddFloorButton 1, Button9, ButtonLit9, 3, 3, 8, 1, 1
     AddFloorButton 1, Button8, ButtonLit8, 4, 3, 7, 1, 1
     AddFloorButton 1, Button7, ButtonLit7, 5, 3, 6, 1, 1
@@ -319,7 +320,7 @@ DrawWalls = true, true, false, false, false, false
     AddFloorButton 1, Button3, ButtonLit3, 9, 3, 2, 1, 1
     AddFloorButton 1, Button2, ButtonLit2, 10, 3, 1, 1, 1
     AddFloorButton 1, Button1, ButtonLit1, 11, 3, 0, 1, 1
-    AddControlButton 1, ButtonOpen, ButtonOpen, 13, 2, open, 1, 1
+    AddControlButton 1, switch.wav, ButtonOpen, ButtonOpen, 13, 2, open, 1, 1
     AddControlButton 1, ButtonClose, ButtonClose, 13, 4, close, 1, 1
     AddControlButton 1, ButtonCancel, ButtonCancel, 14, 2, cancel, 1, 1
     AddControlButton 1, ButtonStop, ButtonStop, 14, 3, stop, 1, 1
