@@ -1357,6 +1357,17 @@
     <br>
     Syntax: <font size="2" face="Courier New, Courier, mono">Parking = <em>floor, 
     delay</em></font></p>
+  <p align="left"><strong>39. LevelingSpeed</strong> - elevator's leveling speed. 
+    Default is 0.2<br>
+    Syntax: <font size="2" face="Courier New, Courier, mono">LevelingSpeed = <em>speed</em></font></p>
+  <p align="left"><strong>40. LevelingOffset</strong> - distance in feet from 
+    the destination floor that the elevator will switch into leveling mode. Default 
+    is 0.5<br>
+    Syntax: <font size="2" face="Courier New, Courier, mono">LevelingOffset = 
+    <em>distance</em></font></p>
+  <p align="left"><strong>41. LevelingOpen</strong> - distance in feet from the 
+    destination floor that the elevator will open the doors. Default is 0.<br>
+    Syntax: <font size="2" face="Courier New, Courier, mono">LevelingOpen = <em>distance</em></font></p>
   <p align="left">&nbsp;</p>
   <p align="left"><strong>Commands:</strong></p>
   <p align="left"><strong>1. CreateElevator</strong> - creates an elevator at 
